--- a/index.html
+++ b/index.html
@@ -7,21 +7,166 @@
     <link href="style.css" rel="stylesheet" type="text/css">
 </head>
 <body>
-<DIV CLASS="card-area">
+<div class="card-area">
     <div class="card">
+        <a href="https://www.zillow.com/homedetails/7324-N-Wheeler-Ave-Fresno-CA-93722/18785134_zpid/"
+           target="_blank">
         <div class="picture-section">
             <div class="update">
                 4 days on zillow
             </div>
             <img class="picture" src="https://photos.zillowstatic.com/fp/d894c303f6a8699bfe6dc16b9c2bcd65-cc_ft_1536.webp">
             <div class="company">
-                Realty Concepts, Ltd.
+                Guarantee Real Estate
             </div>
         </div>
         <div class="info">
-
+            <div class="listing">
+                <div class="price">
+                    $330,000
+                </div>
+                <div class="size">
+                    <strong>3</strong> bd | <strong>2</strong> ba | <strong>1,080</strong> sqft
+                </div>
+            </div>
+            <div class="address">
+                7324 N Wheeler Ave, Fresno, CA 93722
+            </div>
+            <div class="type">
+                &#9962 House for Sale
+            </div>
+            </a>
         </div>
     </div>
-</DIV>
+
+    <div class="card">
+        <a href="https://www.zillow.com/homedetails/4723-W-Morris-Ave-Fresno-CA-93722/64771995_zpid/"
+           target="_blank">
+            <div class="picture-section">
+                <div class="update">
+                    Price cut: $9,000 (Sep 18)
+                </div>
+                <img class="picture" src="https://photos.zillowstatic.com/fp/74af9a3058b81f7acecf235c7f5e5b58-cc_ft_384.webp">
+                <div class="company">
+                    Guarantee Real Estate
+                </div>
+            </div>
+            <div class="info">
+                <div class="listing">
+                    <div class="price">
+                        $500,000
+                    </div>
+                    <div class="size">
+                        <strong>5</strong> bd | <strong>3</strong> ba | <strong>2,815</strong> sqft
+                    </div>
+                </div>
+                <div class="address">
+                    4723 W Morris Ave, Fresno, CA 93722
+                </div>
+                <div class="type">
+                    &#9962 House for Sale
+                </div>
+        </a>
+    </div>
+</div>
+
+
+    <div class="card">
+        <a href="https://www.zillow.com/homedetails/5777-W-Ellery-Ave-Fresno-CA-93722/18788009_zpid/"
+           target="_blank">
+            <div class="picture-section">
+                <div class="update">
+                    Price cut: $8,000 (Oct 2)
+                </div>
+                <img class="picture" src="https://photos.zillowstatic.com/fp/c9864cb8f5102e6b7b4b879c5f6d89a5-cc_ft_1536.webp">
+                <div class="company">
+                    Iron Key Real Estate
+                </div>
+            </div>
+            <div class="info">
+                <DIV class="listing">
+                    <div class="price">
+                        $341,900
+                    </div>
+                    <div class="size">
+                        <strong>2</strong> bd | <strong>2</strong> ba | <strong>1,039</strong> sqft
+                    </div>
+                </DIV>
+                <div class="address">
+                    5777 W Ellery Ave, Fresno, CA 93722
+                </div>
+                <div class="type">
+                    &#9962 House for Sale
+                </div>
+        </a>
+    </div>
+</div>
+
+
+    <div class="card">
+        <a href="https://www.zillow.com/homedetails/4221-W-Menlo-Ave-Fresno-CA-93722/18790106_zpid/"
+           target="_blank">
+            <div class="picture-section">
+                <div class="update">
+                    35 days on Zillow
+                </div>
+                <img class="picture" src="https://photos.zillowstatic.com/fp/2230aac2cc82bfd225e9f4bea3189ab7-cc_ft_1536.webp">
+                <div class="company">
+                    Gentile Real Estate
+                </div>
+            </div>
+            <div class="info">
+                <DIV class="listing">
+                    <div class="price">
+                        $450,000
+                    </div>
+                    <div class="size">
+                        <strong>4</strong> bd | <strong>3</strong> ba | <strong>2,330</strong> sqft
+                    </div>
+                </DIV>
+                <div class="address">
+                    4221 W Menlo Ave, Fresno, CA 93722
+                </div>
+                <div class="type">
+                    &#9962 House for Sale
+                </div>
+            </div>
+        </a>
+    </div>
+
+
+
+    <div class="card">
+        <a href="https://www.zillow.com/homedetails/7316-N-Babigian-Ave-Fresno-CA-93722/95512152_zpid/"
+           target="_blank">
+            <div class="picture-section">
+                <div class="update">
+                    Price cut: $10,000 (Aug 3)
+                </div>
+                <img class="picture" src="https://photos.zillowstatic.com/fp/06559038c072cadd3715f33383b06218-cc_ft_1536.webp">
+                <div class="company">
+                    Amy Gill RE/MAX Gold - Clovis
+                </div>
+            </div>
+            <div class="info">
+                <div class="listing">
+                    <div class="price">
+                        $839,000
+                    </div>
+                    <div class="size">
+                        <strong>4</strong> bd | <strong>3</strong> ba | <strong>2,934</strong> sqft
+                    </div>
+                </div>
+                <div class="address">
+                    7316 N Babigian Ave, Fresno, CA 93722
+                </div>
+                <div class="type">
+                    &#9962 House for Sale
+                </div>
+        </a>
+    </div>
+</div>
+</div>
+
 </body>
 </html>
